fix title id's overlapping

--- a/src/components/AudioCard/AudioCard.css
+++ b/src/components/AudioCard/AudioCard.css
@@ -33,7 +33,7 @@
     display: inline-block;
 }
 
-#title {
+#cardTitle {
     font-size: 1.4rem;
 }
 
@@ -71,6 +71,5 @@
 }
 
 #options {
-    font-size: 2.1rem;
     float: right;
 }
